css/nav_styles.css
body 
{
    /* הנתיב לתמונה שלך */
    background-image: url("../assets/profiles_background.png");

    /* גורם לתמונה לכסות את כל שטח המסך גם אם היא קטנה מדי */
    background-size: cover;

    /* מונע מהתמונה לחזור על עצמה (כמו אריחים) */
    background-repeat: no-repeat;

    /* ממקם את התמונה במרכז המסך */
    background-position: center;

    /* גורם לרקע להישאר קבוע בזמן שגוללים את הדף (אופציונלי) */
    background-attachment: fixed;
    color:white;

    display: grid;
    align-items: center;
    justify-content: center; 
    grid-template-columns: 1fr;
  }

.NAV_BAR_CONTAINER
{
    position: fixed;
    top: 0; 
    left: 0;
    z-index: 1000;
    width: 100%;
    height: 100px;
    display: flex;
    align-items: center;
    justify-content: center; 
}

.NAV_BAR
{
    position: relative;
    width: 95%;
    display: flex;
    align-items: center;
    justify-content: space-between;
    /*BACKGROUND COLOR*/
    background-color: rgba(0, 0, 0, 0.75);
}

.NAV_LOGO_AND_BUTTONS
{
    display: flex;
    align-items: center;
    gap: 0px 20px;
}

.NAV_LOGO
{
    padding: 10px 30px;
}
.NAV_LOGO img
{
    
    width: 50px;
    height: 20px;
}
.NAV_LOGO:hover
{
    background-color: rgba(255, 255, 255, 0.289);
    transition: background-color 0.4s ease;
    cursor: pointer;
}



.NAV_BUTTON
{
    color: rgba(255, 255, 255, 0.504);
    font-size: 14px;
    transition: color 0.2s linear;
}

.NAV_BUTTON:hover
{
    color: rgba(255, 255, 255, 1);
    font-weight: bold;
    transition: color 0.2s linear;
    cursor: pointer;
}

.NAV_RIGHT_ICONS
{
    display: flex;         /* Lays items out in a row */
    align-items: center;
    gap: 10px;
}

.NAV_BAR a
{
    padding: 20px;
}
.NAV_ICON img
{
    width: 20px;
    height: 20px;
}

.NAV_ICON:hover img
{
    background-color: rgba(255, 255, 255, 0.122);
    cursor: pointer;
}

.NAV_USER_PHOTO img
{
    width: 30px;
    height: 30px;
}

.NAV_USER_PHOTO_AND_ICONS
{
    display: flex;
    align-items: center;
    padding-right: 20px;
}


#CONTENT_POSTION
{
    margin: 90px 60px;
   
    display: flex;
    align-items: start;
    justify-items: flex-start;
}

#CONTENT_CONTAINER
{
    gap: 100px;
    display: grid;
    align-items: center;  
    justify-content: center;
    color:rgb(255, 255, 255);
}


.last_watched
{
    width: 100%;
    height: 400px;
    display: flex;
    align-items: center;  
    justify-content: center;
    background-color: rgba(115, 115, 115, 0.408);
    border-radius: 80px;
}

.last_watched_text
{
    margin-right: 100px;
    padding: 40px;
    text-decoration: solid;
    color:rgb(255, 255, 255);
    background-color: rgba(0, 0, 0, 0.379);
    font-size: 70px;
}


.info_block
{
    display: block;
    justify-items: center;
    text-align: center;
    font-size: 20px;
    min-height: 300px;
    min-width: 100%;
    background-color: rgba(1, 0, 0, 0.536);
    border-radius: 10px;
    border: 20px double rgba(242, 57, 57, 0);
    padding-top: 0;
    padding-left: 0px;
    transition: border 1s linear;
}

.info_block:hover
{
    background-color: rgb(0, 0, 0);
    border: 20px double rgba(64, 248, 132, 0.615);
    transition: border 0.5s linear;
    cursor:grab;
}

.dark_block
{
    
    min-height: 300px;
    max-width: 100%;
    background-color: rgba(1, 0, 0, 0.289);
    border-radius: 80px;
    border: 20px dotted rgba(0, 0, 0, 0);
    
    color: rgba(208, 208, 208, 0.308);
    transition: border 0.2s linear;
}

.dark_block:hover
{
    border: 20px dotted rgba(255, 0, 0, 0.662);
    background-color: rgba(0, 0, 0, 0.622);
    color: rgb(255, 255, 255);
    transition: border ,color, background-color 10s linear;
    padding: 60px;
    font-size: 25px;
    transition:  font-size , padding  0.5s linear;
    cursor:grab;
}

